finally I think that I did it

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	 	 <a href="contact.html" style=font-family:"Helvetica",serif;> MAKE-A-MEME</a>
 		  <a href="harambe.html" style=font-family:"Helvetica",serif;> JUSTICE FOR HARAMBE</a>
 		  <a href="Signup.html" style=font-family:"Helvetica",serif;> SIGN-UP</a>
-	<h1 style=font-family:"Helvetica",serif;>LETS SEE IF IT DID IT</h1>
+	<h1 style=font-family:"Helvetica",serif;>LETS SEE IF IT DID IT, hopefully it wont get messed up</h1>
 	
 	
 	
